src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-dwF1000-dhF500-b-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\ndefault column width: F1000\ndefault window height: F500\nborder on\ntabbed"
expression: snapshot
---
initial configure:
size: 1231 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 500, bounds: 1231 × 680, states: [Activated]
